tests/ui/postgres/gated/ipnet.stderr
error: optional sqlx feature `ipnet` required for type INET of column #1 ("inet")
 --> $DIR/ipnet.rs:2:13
  |
2 |     let _ = sqlx::query!("select '127.0.0.1'::inet");
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: optional sqlx feature `ipnet` required for type CIDR of column #1 ("cidr")
 --> $DIR/ipnet.rs:4:13
  |
4 |     let _ = sqlx::query!("select '2001:4f8:3:ba::/64'::cidr");
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: optional sqlx feature `ipnet` required for type INET of param #1
 --> $DIR/ipnet.rs:6:13
  |
6 |     let _ = sqlx::query!("select $1::inet", ());
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: optional sqlx feature `ipnet` required for type CIDR of param #1
 --> $DIR/ipnet.rs:8:13
  |
8 |     let _ = sqlx::query!("select $1::cidr", ());
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
